--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -2,7 +2,156 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF0000"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     android:id="@+id/layout1">
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_horizontal"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 1 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 2 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 3 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_horizontal"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 4 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 5 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 6 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_horizontal"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 7 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 8 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:layout_span="1"
+            android:background="#BE08DF"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text=" 9 "
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold" />
+    </TableRow>
+
+
 </LinearLayout>
