--- a/app/src/main/res/layout/layout4.xml
+++ b/app/src/main/res/layout/layout4.xml
@@ -2,8 +2,172 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFF00"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     android:id="@+id/layout4">
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Left"
+            android:background="@drawable/black_border"
+            android:textSize="18sp"
+            android:textColor="#173DC5"
+            android:gravity="start"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Center"
+            android:textSize="18sp"
+            android:background="@color/white"
+            android:textColor="#173DC5"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Center"
+            android:textSize="18sp"
+            android:textColor="#173DC5"
+            android:background="@color/white"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Right"
+            android:textSize="18sp"
+            android:textColor="#173DC5"
+            android:background="@drawable/black_border"
+            android:gravity="end"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RED"
+            android:background="@drawable/black_border"
+            android:textSize="18sp"
+            android:textColor="#E30808"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="GREEN"
+            android:textSize="18sp"
+            android:background="@color/white"
+            android:textColor="#39830A"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BLUE  "
+            android:textSize="18sp"
+            android:textColor="#173DC5"
+            android:background="@color/white"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BLACK"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:background="@drawable/black_border"
+            android:gravity="center"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RED"
+            android:background="@drawable/red_border"
+            android:textSize="18sp"
+            android:textColor="#E30808"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BLUE"
+            android:textSize="18sp"
+            android:textColor="#173DC5"
+            android:background="@drawable/red_border"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="GREEN"
+            android:textSize="18sp"
+            android:background="@drawable/red_border"
+            android:textColor="#39830A"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WHITE"
+            android:textSize="18sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/red_border"
+            android:gravity="center"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="GREEN"
+            android:background="@drawable/green_bg"
+            android:textSize="18sp"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RED"
+            android:textSize="18sp"
+            android:background="@drawable/red_bg"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="YELLOW"
+            android:textSize="18sp"
+            android:background="@drawable/yellow_bg"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BLACK"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:background="@drawable/black_bg"
+            android:gravity="center"/>
+    </TableRow>
 
 </LinearLayout>
